[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytoolset"
version = "0.1.0"
description = "A collection of Python utility functions"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "wbvguo" }]
keywords = ["utilities", "tools"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
pytoolset = "pytoolset.__main__:main"
ptst = "pytoolset.__main__:main"

[project.optional-dependencies]
test = ["pytest>=8.0"]
text = ["pypdf>=4.0", "tiktoken>=0.7"]
youtube = ["yt-dlp>=2024.0"]

[project.urls]
Homepage = "https://github.com/wbvguo/pytoolset"
Repository = "https://github.com/wbvguo/pytoolset"
Issues = "https://github.com/wbvguo/pytoolset/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
